--- a/src/GUI/QueryFrame.form
+++ b/src/GUI/QueryFrame.form
@@ -14,32 +14,42 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="3279a" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+      <grid id="3279a" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="North"/>
         <properties/>
-        <border type="line" title="Query Panel">
+        <border type="empty">
+          <size top="10" left="10" bottom="10" right="10"/>
           <color color="-4473925"/>
         </border>
         <children>
-          <component id="23492" class="javax.swing.JLabel" binding="label">
-            <constraints/>
-            <properties>
-              <font swing-font="Button.font"/>
-              <text value="Query"/>
-            </properties>
-          </component>
-          <component id="b58d3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-            <constraints/>
-            <properties>
-              <columns value="20"/>
-            </properties>
-          </component>
-          <component id="f128" class="javax.swing.JButton" binding="executeQueryButton" default-binding="true">
-            <constraints/>
-            <properties>
-              <text value="Execute Query"/>
-            </properties>
-          </component>
+          <grid id="77903" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints border-constraint="Center"/>
+            <properties/>
+            <border type="line" title="Query Panel">
+              <color color="-4473925"/>
+            </border>
+            <children>
+              <component id="23492" class="javax.swing.JLabel" binding="label">
+                <constraints/>
+                <properties>
+                  <font swing-font="Button.font"/>
+                  <text value="Query"/>
+                </properties>
+              </component>
+              <component id="b58d3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+                <constraints/>
+                <properties>
+                  <columns value="20"/>
+                </properties>
+              </component>
+              <component id="f128" class="javax.swing.JButton" binding="executeQueryButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <text value="Execute Query"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
       <grid id="104b3" layout-manager="BorderLayout" hgap="0" vgap="0">
